fix customer-microservice: restore customer microservice source after accidental reset
- Restored customer service source, config, and domain layers
- Recovered files removed due to hard reset during monorepo refactor
- Ensured consistency between local workspace and Git history